modules/dt.init.less
/* stylelint-disable no-descending-specificity */

@import 'mediawiki.ui/variables.less';

span[ data-mw-comment-start ] {
	// Give comment anchors a negative offset so we don't position
	// them right at the edge of the page when jumping to them.
	// Use margin rather than position to avoid Chrome bug (T317135).
	position: absolute;
	margin-top: -1em;
}

// stylelint-disable-next-line selector-list-comma-newline-after
h1, h2, h3, h4, h5, h6 {
	span[ data-mw-comment-end ] {
		// Support: Safari
		// Markers at the end of a line and before an inline-block (e.g. edit icon)
		// can cause text to stop wrapping properly. (T298371)
		display: inline-block;
	}
}

.ext-discussiontools-init-replylink-buttons {
	user-select: none;
	display: none;

	// If a site has text-indent set on content, it would be inherited here and cause excessive padding
	text-indent: 0;

	// Add space before the buttons using actual spaces rather than margin, so that they may collapse
	// when the buttons wrap to a new line (T325416).
	// (Except on Minerva, which uses block placements for the buttons rather than inline.)
	body:not( .skin-minerva ) &::before {
		// Must use character escapes to avoid CSS minifier messing up the spaces
		content: '\20\20';
		white-space: pre-wrap;
	}

	.ext-discussiontools-replytool-enabled & {
		display: inline;

		.client-nojs & {
			display: none;
		}
	}

	// No support for reply links in the mobile talk overlay
	// stylelint-disable-next-line selector-class-pattern
	.talk-overlay & {
		display: none;
	}

	.ext-discussiontools-init-replylink {
		&-reply {
			cursor: pointer;
		}

		// Similar to mw-editsection-bracket
		&-bracket {
			color: #54595d;

			.mw-content-ltr &:not( :last-child ),
			.mw-content-rtl .mw-content-ltr &:not( :last-child ),
			.mw-content-rtl &:last-child,
			.mw-content-ltr .mw-content-rtl &:last-child {
				/* @noflip */
				margin-right: 0.25em;
			}

			.mw-content-ltr &:last-child,
			.mw-content-rtl .mw-content-ltr &:last-child,
			.mw-content-rtl &:not( :last-child ),
			.mw-content-ltr .mw-content-rtl &:not( :last-child ), {
				/* @noflip */
				margin-left: 0.25em;
			}
		}
	}

	.ext-discussiontools-init-replylink-open & > .ext-discussiontools-init-replylink-reply {
		color: #72777d;
		pointer-events: none;
	}

	&.ext-discussiontools-init-replylink-active > .ext-discussiontools-init-replylink-reply {
		color: #202122;
		text-decoration: none;
	}

	// Flip the icon in LTR interface languages. Un-flip it in RTL.
	// TODO This should use a different icon, with the image itself flipped (T325664).
	// stylelint-disable-next-line selector-class-pattern
	body.ltr & .ext-discussiontools-init-replybutton .oo-ui-iconElement-icon.oo-ui-icon-share {
		transform: scaleX( -1 );
	}

	@media print {
		// stylelint-disable-next-line declaration-no-important
		display: none !important;
	}
}

// Don't re-color :visited links that act as buttons (T319019)
.ext-discussiontools-init-replylink-reply,
.ext-discussiontools-init-section-subscribe-link {
	&:visited {
		color: #36c;
	}

	.skin-vector-legacy & {
		color: #0645ad;
	}

	.skin-monobook & {
		color: #002bb8;
	}
}

.ext-discussiontools-init-noMarker {
	list-style: none;
}

.ext-discussiontools-init-highlight {
	position: absolute;
	pointer-events: none;
	opacity: 0;
}

/* stylelint-disable-next-line plugin/no-unsupported-browser-features */
@supports ( mix-blend-mode: darken ) {
	.ext-discussiontools-init-highlight {
		/* stylelint-disable-next-line plugin/no-unsupported-browser-features */
		mix-blend-mode: darken;
		// Support: Safari
		// Safari doesn't blend this overlay with the text unless GPU rendering is forced.
		transform: translateZ( 0 );
	}
}

.ext-discussiontools-init-highlight-fadein {
	opacity: 1;
}

.ext-discussiontools-init-highlight-fadeout {
	opacity: 0;
	transition: opacity 250ms ease-out;
}

.ext-discussiontools-init-publishedcomment {
	// Support: IE11
	// On supporting browsers, we instead use non-transparent color with mix-blend-mode.
	// Identical to #ffe29e on white background.
	background-color: rgba( 255, 198, 60, 0.5 );
}

/* stylelint-disable-next-line plugin/no-unsupported-browser-features */
@supports ( mix-blend-mode: darken ) {
	.ext-discussiontools-init-publishedcomment {
		background-color: #ffe29e;
	}
}

.ext-discussiontools-init-targetcomment {
	// Support: IE11, see above
	background-color: rgba( 216, 235, 255, 0.5 );
}

/* stylelint-disable-next-line plugin/no-unsupported-browser-features */
@supports ( mix-blend-mode: darken ) {
	.ext-discussiontools-init-targetcomment {
		// Same color as the :target selector for references (from Cite).
		// Not sure if that's a good idea, but it should be different from -publishedcomment.
		background-color: #eaf3ff;
	}
}

// Topic subscriptions (both kinds)
.ext-discussiontools-visualenhancements-enabled .ext-discussiontools-init-section {
	// Introduce a block formatting context so that floated "subscribe" links/buttons
	// aren't affected by other floats (T327469). Most skins already include this rule
	// for headings, but we add the floating stuff outside of headings (since T314714).
	// https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Block_formatting_context
	overflow: hidden;

	.skin-minerva& {
		overflow: visible;
	}
}
/* ... */

